[package]
name = "poor-jimmy"
version = "2.0.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.12"
url = "2.5.7"
rustypipe = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.songbird]
version = "0.5.0"
default-features = true
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.4"

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "unstable_discord_api",
    "voice",
]

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "rt-multi-thread"]
